--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "expo": "~36.0.0",
+    "expo-cli": "^3.13.1",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "upgrade": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
