--- a/mobile/package.json
+++ b/mobile/package.json
@@ -8,17 +8,22 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~36.0.0",
+    "@react-navigation/native": "^5.0.9",
+    "@react-navigation/stack": "^5.1.1",
+    "axios": "^0.19.2",
+    "expo": "^36.0.0",
     "expo-cli": "^3.13.1",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
-    "react-native-web": "~0.11.7",
+    "moment": "^2.24.0",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
+    "react-native-safe-area-context": "0.6.0",
+    "react-native-web": "^0.11.7",
     "upgrade": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "babel-preset-expo": "~8.0.0"
+    "babel-preset-expo": "^8.0.0"
   },
   "private": true
 }
