--- a/postgre/package.json
+++ b/postgre/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "refactory",
+  "name": "postgre",
   "version": "1.0.0",
-  "description": "Modulo de refatoração para mudança do mongodb para postgresql",
+  "description": "Mudança do database nosql para database relacional",
   "main": "index.js",
   "author": "Lucas de Oliveira Macedo",
   "license": "MIT",
   "scripts": {
     "dev": "nodemon ./index.js"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   },
   "dependencies": {
     "dotenv": "^8.2.0",
@@ -14,8 +17,5 @@
     "pg": "^7.18.2",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.5"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.2"
   }
 }
