--- a/postgre/package.json
+++ b/postgre/package.json
@@ -6,7 +6,7 @@
   "author": "Lucas de Oliveira Macedo",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon ./index.js"
+    "start": "nodemon ./src/index.js"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
@@ -14,8 +14,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "pg": "^7.18.2",
-    "pg-hstore": "^2.3.3",
-    "sequelize": "^5.21.5"
+    "knex": "^0.20.13",
+    "pg": "^7.18.2"
   }
 }
