--- a/mobile/package.json
+++ b/mobile/package.json
@@ -8,26 +8,27 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "0.1.5",
+    "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/native": "^5.0.9",
     "@react-navigation/stack": "^5.1.1",
     "axios": "^0.19.2",
-    "expo": "^36.0.0",
-    "expo-cli": "^3.13.1",
+    "expo": "^37.0.0",
+    "expo-cli": "^3.17.18",
     "moment": "^2.24.0",
     "react": "16.9.0",
     "react-dom": "16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
-    "react-native-gesture-handler": "~1.5.0",
-    "react-native-reanimated": "~1.4.0",
-    "react-native-safe-area-context": "0.6.0",
-    "react-native-screens": "2.0.0-alpha.12",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-reanimated": "~1.7.0",
+    "react-native-safe-area-context": "0.7.3",
+    "react-native-screens": "~2.2.0",
     "react-native-web": "^0.11.7",
+    "update": "^0.7.4",
     "upgrade": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "babel-preset-expo": "^8.0.0"
+    "babel-preset-expo": "^8.1.0"
   },
   "private": true
 }
