--- a/backend/package.json
+++ b/backend/package.json
@@ -9,14 +9,14 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "date-format": "^3.0.0",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "mongoose": "^5.9.7",
-    "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "debug": "~4.1.1",
+    "express": "~4.17.1",
+    "http-errors": "~1.7.3",
+    "mongoose": "^5.9.16",
+    "morgan": "~1.10.0",
+    "pug": "3.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.4"
   }
 }
