--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.2",
     "expo": "~38.0.8",
     "expo-status-bar": "^1.0.2",
+    "moment": "^2.27.0",
     "react": "~16.13.1",
     "react-dom": "~16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
