--- a/mobile/package.json
+++ b/mobile/package.json
@@ -28,7 +28,7 @@
     "@babel/core": "^7.8.6",
     "@types/react": "~16.9.41",
     "@types/react-native": "~0.63.6",
-    "typescript": "~3.9.5"
+    "typescript": "^4.0.2"
   },
   "private": true
 }
